2016-10-27  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (outputLine): Fix handling of NEWLINE_DUMMY.

2016-10-12  Per Bothner  <per@bothner.com>

	* PrettyWriter.java: Define NEWLINE_DUMMY newline type.
	This prints nothing, but is used to end "sections".

2016-10-11  Per Bothner  <per@bothner.com>

	* PrettyWriter.java: Fix two small bugs.
	* OutPort.java (setPrettyPrinting): New method.
	* PrettyWriter.java: Make some members private. Tweak logging.

2016-09-23  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (maybeOutput): Emit plain newline rather than
	a "required" newline, when not inside a block.

2016-09-21  Per Bothner  <per@bothner.com>

	* PrettyWriter.java: If DomTerm, don't do line-breaking.
	Instead send DomTerm-speific escape sequences, so DomTerm
	can do the line-breaking dynamically.
	* OutPort.java (setDomTerm): Also setDomTerm on PrettyWriter bout.

2016-09-08  Per Bothner  <per@bothner.com>

	* JLineInPort.java (parse): Check if Language.parse returned null.

2016-09-07  Per Bothner  <per@bothner.com>

	* OutPort.java (formatter): Make non-public.
	(pushConsumer, popConsumer): Remove unused methods.
	(getPassThroughOutPort): Moved from AbstractFormat.

2016-08-12  Per Bothner  <per@bothner.com>

	A cleaner format/consumer model.
	* OutPort.java: Replace 'objectFormat' and 'numberFormat' fields
	by new 'formatter', initially the PrettyPrinter.
	* PrettyWriter.java: Change to extend PrintConsumer.

2016-07-18  Per Bothner  <per@bothner.com>

	* WriterManager.java (run): Call flush rather than finalize on ports.
	This is safer, since otherwise we can get races because other threads
	might still be active and try to access the port.

2016-07-17  Per Bothner  <per@bothner.com>

	REPL input causing SyntaxException was not being added to history.
	* JLineInPort.java (parse): SyntaxException is now caught by
	Language#parse, so detect end-of-file using ERROR_SEEN.

2016-07-14  Per Bothner  <per@bothner.com>
